--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     
+    <header id="equipo">
+        <h1>Equipo pokemon</h1>
+
+    </header>
+
+    <aside id="debilidades">
+        <h1>Tabla de tipos</h1>
+    </aside>
+
+
+    <main id="pokedex">
+        <h1>Pokemones</h1>
+    </main>
+
 </body>
 </html>
